# AeroRoute-COP3530

./: .gitignore  CMakeLists.txt  README.md  a_star.cpp  aeroroute  dijkstras.cpp  dijkstras.h  main.cpp  main.py  requirements.txt  route_data.cpp  route_data.h
aeroroute.dSYM/Contents/: Info.plist
aeroroute.dSYM/Contents/Resources/DWARF/: aeroroute
backend/: CMakeLists.txt  a_star.cpp  aeroroute  api_cli.cpp  csv_loader.cpp  dijkstras.cpp  main.cpp  route_data.cpp  route_data.h
backend/src/: main.cpp
backend/src/algorithms/: a_star.cpp  a_star.h  dijkstras.cpp  dijkstras.h
backend/src/data/: csv_loader.h  route_data.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/server/: server.js
frontend/src/: App.jsx  styles.css
server/: package-lock.json  package.json  tsconfig.json
server/src/: server.ts
